--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ckeditor5-custom-build",
-  "author": "CKSource",
+  "name": "ckeditor5-paakdegito-degitonew",
+  "author": "paakdegito",
   "description": "custom ckeditor for Degito New Website",
   "version": "0.0.1",
   "license": "SEE LICENSE IN LICENSE.md",
